Wagon: Deploying site to repository

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
     
             <div class="xleft">
-        Version: 0.1.0
+        Version: 0.1.0-SNAPSHOT
               </div>
             <div class="xright">            <a href="http://www.kathrynhuxtable.org/blog/projects/" class="externalLink">Kathryn Huxtable's Projects</a>
             |
@@ -186,7 +186,7 @@
   
     
             <div id="lastPublished">
-        Last Published: 29 Jun 2010
+        Last Published: 30 Jun 2010
               </div>
             </div>
       <div class="xright">                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
