--- a/installation.html
+++ b/installation.html
@@ -50,7 +50,7 @@
   
     
             <div class="xleft">
-        Version: 0.1.0
+        Version: 0.1.0-SNAPSHOT
               </div>
             <div class="xright">            <a href="http://www.kathrynhuxtable.org/blog/projects/" class="externalLink">Kathryn Huxtable's Projects</a>
             |
@@ -135,7 +135,7 @@
     </div>
     <p>To install the Eclipse Cocoa Set Represented Filename plugin, use
     the following Eclipse update site.</p>
-    <p>Update Site: <a class="link" href="http://www.kathrynhuxtable.org/eclipse" target="_top" shape="rect">http://www.kathrynhuxtable.org/eclipse</a>.</p>
+    <p>Update Site: <a class="link" href="http://www.kathrynhuxtable.org/eclipse/cocoa-set-represented-filename" target="_top" shape="rect">http://www.kathrynhuxtable.org/eclipse/cocoa-set-represented-filename</a>.</p>
     <p>To install this plugin in the Eclipse IDE:</p>
     <div class="orderedlist">
       <ol class="orderedlist" type="1">
@@ -190,7 +190,7 @@
   
     
             <div id="lastPublished">
-        Last Published: 29 Jun 2010
+        Last Published: 30 Jun 2010
               </div>
             </div>
       <div class="xright">                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
