--- a/license.html
+++ b/license.html
@@ -50,7 +50,7 @@
   
     
             <div class="xleft">
-        Version: 0.1.0
+        Version: 0.1.0-SNAPSHOT
               </div>
             <div class="xright">            <a href="http://www.kathrynhuxtable.org/blog/projects/" class="externalLink">Kathryn Huxtable's Projects</a>
             |
@@ -124,7 +124,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>Typically the licenses listed for the project are that of the project itself, and not of dependencies.</p></div><div class="section"><h2>Project License<a name="Project_License"></a></h2><a name="Project_License"></a><div class="section"><h3>Eclipse Public License Version 1.0<a name="Eclipse_Public_License_Version_1.0"></a></h3><a name="Eclipse_Public_License_Version_1.0"></a><a class="externalLink" href="file:/Users/huxtable/Documents/workspace/eclipse-cocoa-set-represented-filename/org.kathrynhuxtable.eclipse.plugin.eclipse-cocoa-set-represented-filename.site/../LICENSE.html">[Original text]</a><p>Copy of the license follows.</p>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>Typically the licenses listed for the project are that of the project itself, and not of dependencies.</p></div><div class="section"><h2>Project License<a name="Project_License"></a></h2><a name="Project_License"></a><div class="section"><h3>Eclipse Public License Version 1.0<a name="Eclipse_Public_License_Version_1.0"></a></h3><a name="Eclipse_Public_License_Version_1.0"></a><a class="externalLink" href="file:/Users/huxtable/Documents/workspace/eclipse-cocoa-set-represented-filename/org.kathrynhuxtable.eclipse.cocoa_set_represented_filename_site/../LICENSE.html">[Original text]</a><p>Copy of the license follows.</p>
 
 <h2>Eclipse Public License - v 1.0</h2>
 
@@ -384,7 +384,7 @@ rights to a jury trial in any resulting litigation.</p>
   
     
             <div id="lastPublished">
-        Last Published: 29 Jun 2010
+        Last Published: 30 Jun 2010
               </div>
             </div>
       <div class="xright">                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
