--- a/project-summary.html
+++ b/project-summary.html
@@ -50,7 +50,7 @@
   
     
             <div class="xleft">
-        Version: 0.1.0
+        Version: 0.1.0-SNAPSHOT
               </div>
             <div class="xright">            <a href="http://www.kathrynhuxtable.org/blog/projects/" class="externalLink">Kathryn Huxtable's Projects</a>
             |
@@ -125,7 +125,7 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>Eclipse Cocoa plugin to set Mac OS X represented filename for active file.</td></tr><tr class="a"><td>Description</td><td>Mac OS X Cocoa Eclipse 3.5/3.6 plugin to set the Mac represented document in the
-        window so that, among other things, DTerm works.</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="http://khuxtable.github.com/eclipse-cocoa-set-represented-filename">http://khuxtable.github.com/eclipse-cocoa-set-represented-filename</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>kathrynhuxtable.org</td></tr><tr class="a"><td>URL</td><td><a class="externalLink" href="http://www.kathrynhuxtable.org">http://www.kathrynhuxtable.org</a></td></tr></table></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>org.kathrynhuxtable.eclipse.plugin.eclipse-cocoa-set-represented-filename</td></tr><tr class="a"><td>ArtifactId</td><td>site</td></tr><tr class="b"><td>Version</td><td>0.1.0</td></tr><tr class="a"><td>Type</td><td>pom</td></tr></table></div></div>
+        window so that, among other things, DTerm works.</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="http://khuxtable.github.com/eclipse-cocoa-set-represented-filename">http://khuxtable.github.com/eclipse-cocoa-set-represented-filename</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>kathrynhuxtable.org</td></tr><tr class="a"><td>URL</td><td><a class="externalLink" href="http://www.kathrynhuxtable.org">http://www.kathrynhuxtable.org</a></td></tr></table></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>org.kathrynhuxtable.eclipse.cocoa_set_represented_filename</td></tr><tr class="a"><td>ArtifactId</td><td>org.kathrynhuxtable.eclipse.cocoa_set_represented_filename_site</td></tr><tr class="b"><td>Version</td><td>0.1.0-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>pom</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
@@ -154,7 +154,7 @@
   
     
             <div id="lastPublished">
-        Last Published: 29 Jun 2010
+        Last Published: 30 Jun 2010
               </div>
             </div>
       <div class="xright">                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
