Wagon: Deploying site to repository

--- a/installation.html
+++ b/installation.html
@@ -145,8 +145,7 @@
         press <span class="keysym">Enter</span>. Pressing <span class="keysym">Enter</span> should
         cause Eclipse to update list of available plugins and
         components.</p></li>
-        <li class="listitem"><p>Choose the component listed under kathrynhuxtable.org: "Cocoa
-        Set Represented Filename".</p></li>
+        <li class="listitem"><p>Choose the component listed as: "Cocoa Set Represented Filename".</p></li>
         <li class="listitem"><p>Click <span class="keysym">Next</span>. Eclipse will then check to see if
         there are any issues which would prevent a successful
         installation.</p></li>
